@@ -8,7 +8,7 @@ ext {
     websiteUrl = 'https://github.com/stephengold/JmePower'
 
     // module coordinates of dependencies:
-    heartCoordinates = 'com.github.stephengold:Heart:7.3.0' + jmeTarget
+    heartCoordinates = 'com.github.stephengold:Heart:7.4.1' + jmeTarget
 
     // current versions of libraries:
     jme3Version = '3.5.0-stable'
@@ -22,7 +22,7 @@ targetCompatibility = JavaVersion.VERSION_1_8
 tasks.withType(JavaCompile) { // Java compile-time options:
     options.compilerArgs << '-Xdiags:verbose'
     options.compilerArgs << '-Xlint:unchecked'
-    options.deprecation = true
+    options.deprecation = true // to provide detailed deprecation warnings
     options.encoding = 'UTF-8'
 }
 
@@ -31,12 +31,11 @@ tasks.withType(JavaExec) { // Java runtime options:
     enableAssertions true
     //jvmArgs '-verbose:gc'
     //jvmArgs '-Xms1024m', '-Xmx1024m'
-    //jvmArgs '-XX:+UseConcMarkSweepGC'
     //jvmArgs '-XX:+UseG1GC', '-XX:MaxGCPauseMillis=10'
 }
 
 repositories {
-    //mavenLocal()
+    //mavenLocal() // to find local SNAPSHOTs of libraries
     mavenCentral()
     maven { url 'https://jcenter.bintray.com' } // for Lemur
 }
